# job_search

./: .env.example  .gitignore  ARCHITECTURE.md  PHASES.md  PRINCIPLES.md  Project_dublin.md  README.md  docker-compose.yml  pyproject.toml
migrations/: 0001_init.sql
scripts/: ingest.py
src/dublin_jobs/: __init__.py  config.py  job.py  store.py
src/dublin_jobs/db/: migrate.py  schema.sql
src/dublin_jobs/sources/: __init__.py  jooble.py  models.py
tests/: conftest.py  test_models.py  test_normalize.py
